2010-05-25  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Tools.pm: Set a default verbosity level for logger().

2010-05-25  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Added get_agent_module_id to @EXPORT.

2010-05-25  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Added functions to get alert data (needed by
	  pandora_manage.pl).

2010-05-25  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Added functions to get the id of an OS, a
	  module and a group (needed by pandora_manage.pl).

	* lib/PandoraFMS/Core.pm: Removed tagente_estado.status from the
	  keep_alive_nd query.

2010-05-24  Sergio Martin <sergio.martin@artica.es>

	* util/plugin/snmp_process.pl: Changed the 
	value that change the status of the process
	from 2 to 1.

2010-05-20  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server.spec: Changed release number.

2010-05-20  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/postinst: fixed the linking the conf file.

2010-05-20  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server.spec: Removed unneeded symlinks.

2010-05-20  Ramon Novoa  <rnovoa@artica.es>

	* DEBIAN/control, DEBIAN/make_deb_package.sh,
	  pandora_server.spec: Updated for the release of Pandora FMS 3.1 RC1.

2010-05-20  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/make_deb_package.sh: fixed the permissions to DEBIAN temp package. 
	
2010-05-20  Sancho Lerena <slerena@artica.es>

	* util/plugins/snmp_process.pl: Some small modifications and fixes for 
	RAM output, also improved help.

2010-05-19  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/control: added the depends libio-socket-multicast-perl.

2010-05-19  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/make_deb_package.sh: cleaned the source code.

2010-05-19  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/conffiles: added the conffiles to tell to package maker that its
	the conf file.
	
	* DEBIAN/make_deb_package.sh: changed the script to try to be similar to